[package]
name = "opt300x"
version = "1.0.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
edition = "2021"
repository = "https://github.com/eldruin/opt300x-rs"
description = "Platform-agnostic Rust driver for the OPT300x ambient light sensors. Compatible with OPT3001, OPT3002, OPT3004, OPT3006 and OPT3007"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["ambient", "light", "sensor", "als", "embedded-hal-driver"]
documentation = "https://docs.rs/opt300x"

[dependencies]
embedded-hal = "1"
defmt = { version = "1", optional = true }

[dev-dependencies]
embedded-hal-mock = {version="0.10.0", default-features=false, features=["eh1"]}
futures = "0.3"

[features]
## Use [`defmt`](https://docs.rs/defmt/latest/defmt/) for logging
defmt = ["dep:defmt"]
